force-app/main/default/objects/cgcloud__Payment_Tactic_Product__c/cgcloud__Payment_Tactic_Product__c.object-meta.xml
<CustomObject>
    <description>Contains the payment tactic products and assigned values on LDP level or the level that the project defines as payment product level.</description>
    <label>Claim Tactic Product</label>
    <nameField>
        <displayFormat>PTP-{000000000}</displayFormat>
        <label>Claim Tactic Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Tactics Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>