force-app/main/default/objects/cgcloud__Payment_Tactic_Product__c/fields/cgcloud__Additional_Kpi_Value_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_Kpi_Value_3__c</fullName>
    <description>Kpi Value for measure defined in Payment_Template__c.Additional_Snapshot_Kpi_Definition_3__c</description>
    <label>Additional_Kpi_Value_3</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>