force-app/main/default/objects/cgcloud__Payment_Tactic_Product__c/fields/cgcloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount__c</fullName>
    <description>Payment amount for the current tactic/product combination</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>