force-app/main/default/objects/cgcloud__Payment_Tactic_Product__c/fields/cgcloud__Payment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment__c</fullName>
    <description>Reference to the payment</description>
    <label>Claim</label>
    <referenceTo>cgcloud__Payment__c</referenceTo>
    <relationshipLabel>Claim Tactics Products</relationshipLabel>
    <relationshipName>Payment_Tactics_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>