force-app/main/default/objects/cgcloud__Payment_Tactic_Product__c/fields/cgcloud__Payment_Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Tactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment/Tactic combination to which the record belongs</description>
    <label>Claim Tactic</label>
    <referenceTo>cgcloud__Payment_Tactic__c</referenceTo>
    <relationshipLabel>Claim Tactics Products</relationshipLabel>
    <relationshipName>Payment_Tactics_Products</relationshipName>
    <type>Lookup</type>
</CustomField>