force-app/main/default/objects/cgcloud__Payment_Tactic_Product__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product to which the record belongs. The level of the product is bound by Payment_Template__c.Snapshot_Product_Level__c</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Payment Tactics Products</relationshipLabel>
    <relationshipName>Payment_Tactics_Products</relationshipName>
    <type>Lookup</type>
</CustomField>